# LibMainLoader

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: _config.h  fileutils.hpp  jni.hpp  log.hpp  modloader.hpp
src/: fileutils.cpp  jni.cpp  main.cpp  modloader.cpp
